--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@angular/core": "^16.2.0",
     "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.11",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@syncfusion/ej2-angular-splitbuttons": "^23.1.43",
     "firebase": "^10.5.2",
+    "ng-click-outside": "^9.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
